# Edgerunner

./: .gitignore  CMakeLists.txt  README.md
share/basis/: augmentation-cc-pv5z-jkfit.g94  augmentation-cc-pv5z-ri.g94  augmentation-cc-pv5z.g94  augmentation-cc-pvdz-jkfit.g94  augmentation-cc-pvdz-ri.g94  augmentation-cc-pvdz.g94  augmentation-cc-pvtz-jkfit.g94  augmentation-cc-pvtz-ri.g94  cc-pv6z.g94  cc-pvqz-f12-cabs.g94  cc-pvqz-jkfit.g94  cc-pvqz.g94  cc-pvtz-f12.g94  cc-pvtz.g94
share/basis/def2-SV(P)-JKFIT/: Au.json
src/: CMakeLists.txt  README.md  main.cpp
src/gto/: gto.cpp  gto.h  gto.hpp
src/hf/: hf.cpp  hf.hpp
src/integral/: integral.cpp  integral.hpp
src/linalg/: einsum.hpp
src/mp2/: mp2.cpp  mp2.hpp
src/share/basis/: ano-rcc.g94  aug-cc-pv5z-cabs.g94  aug-cc-pvdz-cabs.g94  aug-cc-pvqz-cabs.g94  aug-cc-pvtz-cabs.g94  augmentation-cc-pv6z-ri.g94  augmentation-cc-pv6z.g94  augmentation-cc-pvqz-jkfit.g94  augmentation-cc-pvqz-ri.g94  augmentation-cc-pvqz.g94  augmentation-cc-pvtz.g94  cc-pv5z-jkfit.g94  cc-pv5z-ri.g94  cc-pv5z.g94  cc-pv6z-ri.g94  cc-pvdz-f12-cabs.g94  cc-pvdz-f12.g94  cc-pvdz-jkfit.g94  cc-pvdz-ri.g94  cc-pvdz.g94  cc-pvqz-f12.g94  cc-pvqz-ri.g94  cc-pvtz-f12-cabs.g94  cc-pvtz-jkfit.g94  cc-pvtz-ri.g94
